Consul註冊與使用

--- a/Order.API/appsettings.json
+++ b/Order.API/appsettings.json
@@ -6,5 +6,12 @@
       "Microsoft.Hosting.Lifetime": "Information"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "ConsulSetting": {
+    "ServiceName": "OrderService",
+    "ServiceIP": "localhost",
+    "ServiceHealthCheck": "/healthcheck",
+    // 注意，docker容器內部無法使用localhost訪問宿主機器，如果是控制台啟動的話就用localhost
+    "ConsulAddress": "http://host.docker.internal:8500"
+  }
 }
