--- a/Product.API/appsettings.json
+++ b/Product.API/appsettings.json
@@ -1,4 +1,4 @@
-{
+ï»¿{
   "Logging": {
     "LogLevel": {
       "Default": "Information",
@@ -11,7 +11,10 @@
     "ServiceName": "ProductService",
     "ServiceIP": "localhost",
     "ServiceHealthCheck": "/healthcheck",
-    // ª`·N¡Adocker®e¾¹¤º³¡µLªk¨Ï¥Îlocalhost³X°İ±J¥D¾÷¾¹¡A¦pªG¬O±±¨î¥x±Ò°Êªº¸Ü´N¥Îlocalhost
+    // æ³¨æ„ï¼Œdockerå®¹å™¨å…§éƒ¨ç„¡æ³•ä½¿ç”¨localhostè¨ªå•å®¿ä¸»æ©Ÿå™¨ï¼Œå¦‚æœæ˜¯æ§åˆ¶å°å•Ÿå‹•çš„è©±å°±ç”¨localhost
     "ConsulAddress": "http://host.docker.internal:8500"
+  },
+  "ConnectionStrings": {
+    "ProductContext": "User ID=postgres;Password=pg123456;Host=host.docker.internal;Port=5432;Database=Product;Pooling=true;"
   }
 }
